# codealpha_job_board_platform

./: README.md  requirements.txt
job_board/: pyproject.toml  pytest.ini  render.yaml  requirements.txt
job_board/job_board/: settings.py  urls.py
job_board/jobs/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
job_board/jobs/migrations/: 0001_initial.py  0002_joblisting_job_type_alter_jobapplication_status_and_more.py  0003_jobapplication_resume.py
job_board/jobs/tests/: test_job_application.py  test_job_lists.py  test_jobs.py
job_board/resumes/: models.py
job_board/resumes/migrations/: 0001_initial.py
job_board/users/: managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
job_board/users/migrations/: 0001_initial.py  0002_customuser_is_employer_customuser_is_job_seeker_and_more.py
